<resources>
    <string name="app_name">AppOint</string>
    <string name="author">David Campos Rodríguez</string>
    <string name="text_author">Author: %1$s</string>

    <string name="api_uri_key" translatable="false">api_uri_key</string>
    <string name="session_file_key" translatable="false">session_file</string>
    <string name="session_phone_key" translatable="false">session_phone</string>
    <string name="session_key_key" translatable="false">session_key</string>
    <string name="session_id_key" translatable="false">session_id</string>
    <string name="session_user_id_key" translatable="false">session_user_id</string>
    <string name="session_user_name_key" translatable="false">session_user_name</string>
    <string name="session_user_pic_id_key" translatable="false">session_user_picture_id</string>

    <string name="common_IDD_for_international_calls">00</string>

    <string name="preferences_file_key" translatable="false">preferences_file</string>
    <string name="session_users_last_update" translatable="false">users_update_done_key</string>
    <string name="session_appointments_last_update" translatable="false">appointments_update_done_key</string>

    <string name="logo">Logo</string>
    <string name="phone_number">Phone number:</string>
    <string name="log_in_register">Log in / Register</string>
    <string name="title_activity_main">AppOint</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="title_notify_appointments">Notify me of close appointments</string>
    <string name="summary_notify_appointments">Show a notification when the time of an appointment is close</string>
    <string name="key_notify_appointments">notify_appointments</string>
    <string name="pref_header_profile">Profile</string>
    <string name="pref_header_users">Users</string>
    <string name="key_name">name</string>
    <string name="title_name">Name</string>

    <string name="appointment_type_icon">Appointment type icon</string>

    <string name="text_loading">Loading…</string>
    <string name="text_alone">Alone</string>
    <string name="format_place_and_data">%1$s, %2$s</string>
    <string name="cant_open_appointment">Sorry, we can\'t open this appoint now</string>
    <string name="something_wrong">Something has gone wrong.</string>
    <string name="this_indicates_the_appointment_is_yours">This indicates the appointment is yours</string>
    <string name="date_and_time_of_the_appointment">Date and time of the appointment</string>
    <string name="text_accept_invitation">I\'ll be there!</string>
    <string name="suggest_change">Suggest a change</string>
    <string name="refuse">Refuse</string>
    <string name="cancel_refuse">Wait… maybe I\'ll go</string>
    <string name="text_cancel_accepted_invitation">I thought it better…</string>
    <string name="text_you">You</string>
    <string name="text_accept">Accept</string>
    <string name="google_play_missing">Google Play services is not installed on the phone.</string>
    <string name="google_play_disabled">Google Play services is disabled on the device. Please, enable Google Play services.</string>
    <string name="google_play_out_of_date">The current version of Google Play services is out of date. Please, update Google Play Services.</string>
    <string name="google_play_updating">Google Play service is updating.</string>
    <string name="google_play_invalid">Google Play version installed on the phone is not valid.</string>
    <string name="map_impossible_to_display">"It isn't possible to display the map. "</string>
    <string name="text_creator">creator</string>
    <string name="text_pending">pending</string>
    <string name="text_refused">refused</string>
    <string name="text_accepted">accepted</string>
    <string name="text_x_is_blocked">" is blocked"</string>
    <string name="text_unblock">Unblock</string>
    <string name="text_block">Block</string>
    <string name="close_discussion">Close discussion</string>
    <string name="open_discussion">Open discussion</string>
    <string name="text_user_profile_picture">User\'s profile picture</string>
    <string name="text_about">About</string>
    <string name="author_mail"><![CDATA[<david.campos@rai.usc.es>]]></string>
    <string name="text_suggestion">%1$s suggested %2$s.</string>
    <string name="text_reason">Reason: %1$s\n%2$s</string>
    <string name="description_leaves_background">Leaves in the background</string>
    <string name="text_nothing_to_show_yet">No %1$s to show yet</string>
    <string name="text_appointments">appointments</string>
    <string name="text_suggestions">suggestions</string>
    <string name="login_failed_text">Some problem during login.</string>
    <string name="api_url">Api url…</string>
    <string name="changing_api_url">Changing API url…</string>
    <string name="pref_close_session_key">pref_close_session</string>
    <string name="close_session_title">Close session</string>
    <string name="close_session_summary">Close the current user session</string>
    <string name="session_types_reasons_done_key">types_reasons_done_key</string>
    <string name="text_updating_users">Updating users…</string>
    <string name="text_updating_appointments">Updating appointments…</string>
    <string name="text_updating_types_and_reasons">Updating types and reasons…</string>
    <string name="text_creating_session">Creating session…</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="clock_icon_description">Clock icon representing the time of the appointment</string>
    <string name="action_done">Done</string>
    <string name="appointment_timestamp">Timestamp: %1$s</string>
    <string name="timestamp_format">%1$04d/%2$02d/%3$02d, %4$02d:%5$02d</string>

    <plurals name="withs_and_x_more">
        <item quantity="one">" and %d more"</item>
        <item quantity="other">" and %d more"</item>
    </plurals>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appointment_name_hint">Appointment name</string>
    <string name="appointment_description_hint">Appointment description</string>
    <string name="open_switch_text">Open discussion for date and hour</string>
    <string name="btn_change_text">Change</string>
    <string name="text_not_selected">Not selected</string>
    <string name="selected_type_icon_description">Icon of the selected type</string>
    <string name="text_next">Next</string>
    <string name="edit_text_place_hint">Place</string>
    <string name="check_location_settings_fail_text">Couldn\'t get location (user denied the access).</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_latlong">Invalid LatLong used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="flags_attributions">Flag icons from www.icondrawer.com</string>
    <string name="unknown_place">Unknown place</string>
    <string name="place_pattern">%1$s (%2$s)</string>
    <string name="text_location_not_selected">You have to select a location</string>
    <string name="description_not_valid_text">Enter a valid description</string>
    <string name="name_not_valid_text">Please, enter a valid name</string>
    <string name="text_getting_account_information">Getting account information…</string>
    <string name="pref_username_key">pref_username</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_dialog_title">Username</string>
    <string name="title_suggest_change">Suggest change</string>
    <string name="message_suggest_change">Do you really want to do the following suggestion?\n%1$s\nReason: %2$s</string>
    <string name="title_accept_suggestion">Accept suggestion</string>
    <string name="message_accept_suggestion">Do you want to set the appointment time to \'%1$s\'?</string>
    <string name="title_change_time">Change time</string>
    <string name="change_proposal">Change date and time</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>
    <string name="unable_connect_google">Unable to connect to Google Services</string>
    <string name="retry">Retry</string>
</resources>
