<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- <PreferenceCategory
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_notify_appointments"
            android:summary="@string/summary_notify_appointments"
            android:title="@string/title_notify_appointments" />
    </PreferenceCategory>
    <PreferenceCategory
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_users">
    </PreferenceCategory> -->
    <PreferenceCategory
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/pref_header_profile">
        <EditTextPreference
            android:key="@string/pref_username_key"
            android:title="@string/pref_username_title"
            android:dialogTitle="@string/pref_username_dialog_title" />
        <Preference
            android:key="@string/pref_close_session_key"
            android:title="@string/close_session_title"
            android:summary="@string/close_session_summary" />
    </PreferenceCategory>
</PreferenceScreen>
