<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@android:color/white"
    android:id="@+id/login_layout"
    tools:context=".LoginActivity">
    <ImageView
        android:gravity="center"
        android:layout_width="285dp"
        android:layout_height="222dp"
        android:src="@drawable/logo"
        android:id="@+id/ivLogo"
        android:contentDescription="@string/logo"
        android:layout_gravity="center_horizontal|top"
        android:layout_above="@+id/tvTextPhoneNumber"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phone_number"
        android:id="@+id/tvTextPhoneNumber"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:labelFor="@+id/etPhoneNumberInput"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/pb_doing_login_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_loginInfo"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/pb_doing_login_bar"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/etPhoneNumberInput"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/tvTextPhoneNumber"
        android:layout_alignRight="@+id/ivLogo"
        android:layout_alignEnd="@+id/ivLogo"
        android:layout_alignLeft="@+id/ivLogo"
        android:layout_alignStart="@+id/ivLogo"
        android:digits="+0123456789"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_register"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/etPhoneNumberInput"
        android:layout_alignLeft="@+id/etPhoneNumberInput"
        android:layout_alignStart="@+id/etPhoneNumberInput"
        android:layout_alignRight="@+id/etPhoneNumberInput"
        android:layout_alignEnd="@+id/etPhoneNumberInput" />
</RelativeLayout>
